--- a/app/src/main/res/layout/activity_item_details.xml
+++ b/app/src/main/res/layout/activity_item_details.xml
@@ -52,7 +52,7 @@
 
 
     <RelativeLayout
-        android:id="@+id/relative_phone"
+        android:id="@+id/addDateSection"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/relative_name"
@@ -72,7 +72,7 @@
                 android:textSize="12sp" />
 
             <TextView
-                android:id="@+id/expiryDate"
+                android:id="@+id/addDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="No data"
@@ -83,6 +83,11 @@
 
     </RelativeLayout>
 
+    <View
+        android:layout_below="@+id/addDateSection"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/black"/>
 
 
     <View
@@ -92,5 +97,38 @@
         android:background="@color/black" />
 
 
+    <RelativeLayout
+        android:id="@+id/expiryDateSection"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/addDateSection"
+        android:background="?attr/selectableItemBackground"
+        android:clickable="true"
+        android:focusable="true"
+        android:paddingVertical="10dp">
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="70dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Expiry Date"
+                android:textSize="12sp" />
+
+            <TextView
+                android:id="@+id/expiryDate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="No data"
+                android:textColor="@color/black"
+                android:textSize="26sp" />
+
+        </LinearLayout>
+
+
+    </RelativeLayout>
 </RelativeLayout>
