--- a/app/src/main/res/layout/activity_item_details.xml
+++ b/app/src/main/res/layout/activity_item_details.xml
@@ -16,11 +16,13 @@
         android:textColor="@color/black"
         android:text="" />
 
+
     <RelativeLayout
         android:id="@+id/relative_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/scode_profile"
+        android:layout_marginTop="-33dp"
         android:background="?attr/selectableItemBackground"
         android:clickable="true"
         android:focusable="true"
@@ -49,7 +51,6 @@
         </LinearLayout>
 
     </RelativeLayout>
-
 
     <RelativeLayout
         android:id="@+id/addDateSection"
