--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,9 +22,7 @@
 
     <include layout="@layout/content_main" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/relativeLayout3"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -48,9 +46,10 @@
                 android:orientation="vertical">
 
                 <ListView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
                     android:id="@+id/listview"
+                    android:layout_width="match_parent"
+                    android:layout_height="210dp"
+                    android:scrollbarSize="6dp"
                     tools:ignore="TouchTargetSizeCheck"
                     tools:listitem="@layout/item_layout" />
             </LinearLayout>
@@ -140,6 +139,22 @@
             </androidx.cardview.widget.CardView>
 
         </LinearLayout>
+
+        <TextView
+            android:id="@+id/editTextTextPersonName"
+            android:layout_width="278dp"
+            android:layout_height="40dp"
+            android:ems="10"
+            android:gravity="center|left"
+            android:text="@string/items"
+            android:textSize="24dp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/IngredientsDisplay"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.436"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/ll2"
+            app:layout_constraintVertical_bias="1.0" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
