--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -9,6 +9,7 @@
         android:orientation="horizontal">
         <TextView
             android:id="@+id/item_name"
+            android:textSize="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"/>
@@ -24,6 +25,7 @@
         android:orientation="horizontal">
         <TextView
             android:id="@+id/expiryDate"
+            android:textSize="14dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <ImageView
