--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,8 +26,7 @@
         android:id="@+id/relativeLayout3"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="20dp"
->
+        android:padding="20dp">
 
         <ScrollView
             android:id="@+id/IngredientsDisplay"
