--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -5,18 +5,25 @@
     android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
         <TextView
             android:id="@+id/item_name"
             android:textSize="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="item_name"
+            android:layout_weight="1"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="addDate:"
             android:layout_weight="1"/>
         <TextView
             android:id="@+id/addDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="addDate"
             android:layout_weight="3"/>
     </LinearLayout>
     <LinearLayout
@@ -24,14 +31,25 @@
         android:layout_height="match_parent"
         android:orientation="horizontal">
         <TextView
+            android:textSize="14dp"
+            android:layout_weight="2"
+            android:text="expiryDate:"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        <TextView
             android:id="@+id/expiryDate"
             android:textSize="14dp"
+            android:layout_weight="3"
+            android:text="1998-01-01 00:00:00"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <ImageView
+            android:visibility="invisible"
             android:id="@+id/warning"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_weight="1"
+            android:src="@drawable/warning"
+            android:layout_width="25dp"
+            android:layout_height="25dp"/>
     </LinearLayout>
 
 
