--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -9,23 +9,46 @@
         android:orientation="horizontal">
         <TextView
             android:id="@+id/item_name"
-            android:textSize="20dp"
+            android:textSize="24dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="item_name"
-            android:layout_weight="1"/>
+            android:layout_weight="5"/>
+        <ImageView
+            android:visibility="gone"
+            android:id="@+id/warning"
+            android:layout_weight="1"
+            android:src="@drawable/warning"
+            android:layout_width="25dp"
+            android:layout_height="25dp"/>
+        <ImageView
+            android:visibility="gone"
+            android:id="@+id/warning_yellow"
+            android:layout_weight="1"
+            android:src="@drawable/warning_yellow"
+            android:layout_width="25dp"
+            android:layout_height="25dp"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="addDate:"
-            android:layout_weight="1"/>
+            android:layout_weight="2"
+            android:text="Item added on:" />
+
         <TextView
             android:id="@+id/addDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="addDate"
-            android:layout_weight="3"/>
+            android:layout_weight="3"
+            android:text="" />
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -33,7 +56,7 @@
         <TextView
             android:textSize="14dp"
             android:layout_weight="2"
-            android:text="expiryDate:"
+            android:text="Expiry date:"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <TextView
@@ -43,13 +66,6 @@
             android:text="1998-01-01 00:00:00"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
-        <ImageView
-            android:visibility="invisible"
-            android:id="@+id/warning"
-            android:layout_weight="1"
-            android:src="@drawable/warning"
-            android:layout_width="25dp"
-            android:layout_height="25dp"/>
     </LinearLayout>
 
 
